# pstramp

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: release.yml
src/: main.rs
